# wav-audio-player

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
src/: CMakeLists.txt  main.cpp
